--- a/app/views/monitor/live-present.html
+++ b/app/views/monitor/live-present.html
@@ -175,6 +175,9 @@ GOV.UK prototype kit
                 <div style="margin-top: 30px; margin-bottom: 30px;">
                   <input type="submit" class="button-secondary" formaction="#" value="Download this data">
                 </div>
+                <div style="margin-top: 30px; margin-bottom: 30px;">
+                  <input type="submit" class="button-secondary" formaction="#" value="Email all ">
+                </div>
 
                 {% include "includes/registered-people-list.html" %}
 
