--- a/app/views/includes/checkin-list.html
+++ b/app/views/includes/checkin-list.html
@@ -4,7 +4,12 @@
 <tr  style="border-bottom: 1px solid #bfc1c3;">
 
   <td valign="top" style="border: 0px; padding-top: 32px; padding-bottom: 25px; width:55%;">
-    <p style="font-weight:700; margin:0;">{{ session.registeredPeopleCheckinNames1[nameNumber] }}</p>
+    {% if session.currentEventShowing == 0 %}
+      <p style="font-weight:700; margin:0;">{{ session.registeredPeopleCheckinNames1[nameNumber] }}</p>
+    {% elif  session.currentEventShowing == 1  %}
+      <p style="font-weight:700; margin:0;">{{ session.registeredPeopleCheckinNames2[nameNumber] }}</p>
+    {% endif %}
+
   </td>
 
   <td valign="top" style="border: 0px; padding-top: 18px; padding-bottom: 16px;">
@@ -59,6 +64,18 @@
         {{ regiseredPerson(8) }}
         {{ regiseredPerson(9) }}
       {% endif %}
+
+      {% if session.currentEventShowing == 1 %}
+        {{ regiseredPerson(0) }}
+        {{ regiseredPerson(1) }}
+        {{ regiseredPerson(2) }}
+        {{ regiseredPerson(3) }}
+        {{ regiseredPerson(4) }}
+        {{ regiseredPerson(5) }}
+        {{ regiseredPerson(6) }}
+      {% endif %}
+
+
 
       </tbody>
     </table>
