--- a/app/views/includes/registered-people-list.html
+++ b/app/views/includes/registered-people-list.html
@@ -1,6 +1,9 @@
 
 <!--  MACRO TO MAKE EACH LIVE LINE ITEM -->
 {% macro regiseredPerson(listItemNumber, whichList) %}
+
+
+{% if whichList == 1  %}
 <tr>
 
   <td valign="top" style="border: 0px; padding-top: 14px; padding-bottom: 0px;"> {{ session.registeredPeopleData1[listItemNumber][2] }} </td>
@@ -8,11 +11,11 @@
   <td valign="top" style="border: 0px; padding-top: 14px; padding-bottom: 0px;"> DIT South West</td>
   <td valign="top" style="border: 0px; padding-top: 14px; padding-bottom: 0px;">
     {% if session.registeredPeopleData1[listItemNumber][16] == "New to DIT"  %}
-      <span style="font-weight:700;">{{ session.registeredPeopleData1[listItemNumber][16] }}</span>
+    <span style="font-weight:700;">{{ session.registeredPeopleData1[listItemNumber][16] }}</span>
     {% else %}
-      {{ session.registeredPeopleData1[listItemNumber][16] }}
+    {{ session.registeredPeopleData1[listItemNumber][16] }}
     {% endif  %}
-   </td>
+  </td>
 </tr>
 
 <tr>
@@ -57,11 +60,11 @@
           <p>
 
           </p><span style="font-weight:700;">Food allergies</span><br>
-            {{ session.registeredPeopleData1[listItemNumber][15] }} <br>
+          {{ session.registeredPeopleData1[listItemNumber][15] }} <br>
           </p>
           <p>
             {% if cdms %}
-              <a href="#">See full customer record</a>
+            <a href="#">See full customer record</a>
             {% endif %}
           </p>
         </div>
@@ -70,6 +73,82 @@
   </td>
 
 </tr>
+
+
+{% elif whichList == 2 %}
+<tr>
+
+  <td valign="top" style="border: 0px; padding-top: 14px; padding-bottom: 0px;"> {{ session.registeredPeopleData2[listItemNumber][2] }} </td>
+  <td valign="top" style="border: 0px; padding-top: 14px; padding-bottom: 0px;"> {{ session.registeredPeopleData2[listItemNumber][3] }}</td>
+  <td valign="top" style="border: 0px; padding-top: 14px; padding-bottom: 0px;"> DIT South West</td>
+  <td valign="top" style="border: 0px; padding-top: 14px; padding-bottom: 0px;">
+    {% if session.registeredPeopleData2[listItemNumber][16] == "New to DIT"  %}
+    <span style="font-weight:700;">{{ session.registeredPeopleData2[listItemNumber][16] }}</span>
+    {% else %}
+    {{ session.registeredPeopleData2[listItemNumber][16] }}
+    {% endif  %}
+  </td>
+</tr>
+
+<tr>
+
+  <td colspan="4" style="padding-top:2px;">
+    <div>
+      <details>
+        <summary><span class="summary">More details</span></summary>
+        <div class="panel panel-border-narrow">
+          <p><span style="font-weight:700;">Registration Time</span><br>
+            {{ session.registeredPeopleData2[listItemNumber][1] }}<br>{{ session.registeredPeopleData2[listItemNumber][0] }}
+          </p>
+          <p><span style="font-weight:700;">Job title</span><br>
+            {{ session.registeredPeopleData2[listItemNumber][4] }}
+          </p>
+          <p><span style="font-weight:700;">Phone Number</span><br>
+            {{ session.registeredPeopleData2[listItemNumber][5] }}
+          </p>
+          <p><span style="font-weight:700;">Email address</span><br>
+            {{ session.registeredPeopleData2[listItemNumber][6] }}
+          </p>
+          <p><span style="font-weight:700;">Consent for marketing</span><br>
+            {{ session.registeredPeopleData2[listItemNumber][7] }}
+          </p>
+          <p><span style="font-weight:700;">Address</span><br>
+            {{ session.registeredPeopleData2[listItemNumber][8] }} <br>
+            {{ session.registeredPeopleData2[listItemNumber][9] }} <br>
+            {{ session.registeredPeopleData2[listItemNumber][10] }}
+          </p>
+          <p><span style="font-weight:700;">Sector</span><br>
+            {{ session.registeredPeopleData2[listItemNumber][11] }} <br>
+          </p>
+          <p><span style="font-weight:700;">Website</span><br>
+            {{ session.registeredPeopleData2[listItemNumber][12] }} <br>
+          </p>
+          <p><span style="font-weight:700;">Currently exporting</span><br>
+            {{ session.registeredPeopleData2[listItemNumber][13] }} <br>
+          </p>
+          <p><span style="font-weight:700;">Company turnover</span><br>
+            {{ session.registeredPeopleData2[listItemNumber][14] }} <br>
+          </p>
+          <p>
+
+          </p><span style="font-weight:700;">Food allergies</span><br>
+          {{ session.registeredPeopleData2[listItemNumber][15] }} <br>
+          </p>
+          <p>
+            {% if cdms %}
+            <a href="#">See full customer record</a>
+            {% endif %}
+          </p>
+        </div>
+      </details>
+    </div>
+  </td>
+
+</tr>
+{% endif  %}
+
+
+
 
 {% endmacro %}
 
@@ -107,6 +186,18 @@
           {{ regiseredPerson(7, 1) }}
           {{ regiseredPerson(8, 1) }}
           {{ regiseredPerson(9, 1) }}
+      {% endif  %}
+
+
+      <!-- Coal Mongolia  -->
+      {% if session.currentEventShowing == 1 %}
+        {{ regiseredPerson(0, 2) }}
+        {{ regiseredPerson(1, 2) }}
+        {{ regiseredPerson(2, 2) }}
+        {{ regiseredPerson(3, 2) }}
+        {{ regiseredPerson(4, 2) }}
+        {{ regiseredPerson(5, 2) }}
+        {{ regiseredPerson(6, 2) }}
       {% endif  %}
 
 
