updates to internal and external journeys for testing

--- a/app/views/create-event/template-reg.html
+++ b/app/views/create-event/template-reg.html
@@ -71,7 +71,7 @@
 					<textarea class="form-control" name="event-reg-body" id="event-reg-body" rows="20" style="width: 80%;"
 					>We really hope that you enjoy the experience and that it will be a valuable part of your business export journey with us.
 
-Remember to regularly check the event web page for latest additions to the agenda, confirmed speakers and experts - plus a list of fellow attendees that could prove useful for networking opportunities.
+Remember to regularly check the event web page for latest additions to the agenda, confirmed speakers and experts.
 [EVENT PAGE LINK]
 
 If you have any questions or special requests that will help you to get the most out of the day, please don't hesitate to get in touch. We'd be happy to assist.
