--- a/app/views/register/confirmation-page.html
+++ b/app/views/register/confirmation-page.html
@@ -22,12 +22,13 @@
           <strong class="heading-medium">HDJ2123F</strong>
         </p>
       </div>
-      <p>We have sent you a confirmation email to sarah.philipps@gmail.com .</p>
+      <p>We have sent you a confirmation email to {{ data['email-address'] }} .</p>
 
       <h2 class="heading-medium">What happens next</h2>
       <p>Updates and reminders containing further details and instructions will be sent out closer to the day of your event, so do keep an eye on your inbox.</p>
       <p>On the day of the event, you'll just need to provide your confirmation number in order to check-in.</p>
       <p>We really hope that you enjoy the event and that it will be a valuable part of your export journey with us.</p>
+      <h2 class="heading-medium">What did you think of this service?</h2>
       <p><a class="link" href="#">Our feedback survey</a> only takes about 30 seconds to complete and helps us to understand how we can improve our events experience.</p>
 
 
