--- a/app/views/register/index.html
+++ b/app/views/register/index.html
@@ -161,7 +161,7 @@
 					  </label>
 					  <div id="show-new-question" style="width:100%;  margin-bottom:0px;">
 						  <input type="text" class="form-control  {% if errorQuestionEmpty %} form-control-error {% endif %}"
-								 id="question" name="question" value="" style="width:100%;">
+								 id="business-name" name="business-name" value="" style="width:100%;">
 					  </div>
 				  </div>
 		
@@ -177,7 +177,7 @@
 					  </label>
 					  <div id="show-new-question" style="width:100%;  margin-bottom:0px;">
 						  <input type="text" class="form-control  {% if errorQuestionEmpty %} form-control-error {% endif %}"
-								 id="question" name="question" value="" style="width:50%;">
+								 id="website" name="website" value="" style="width:50%;">
 					  </div>
 				  </div>
 
