updates on register

--- a/app/views/register/additional-questions.html
+++ b/app/views/register/additional-questions.html
@@ -91,7 +91,7 @@
 			 
 				</div>
 {% endif %}
-{% set QuestionsCounter = randomHash() %}
+{% set QuestionsCounter = 0 %}
 {{QuestionsCounter}}
 {% endmacro %}
 
