external journey updates

--- a/app/views/account/index.html
+++ b/app/views/account/index.html
@@ -14,7 +14,7 @@
 		  DIT {{ data['organiser-name'] }} events
       </h1>
 
-
+{{ session.eventsLive[5] }}
 		<!--  TABS FOR TYPES OF EVENT STATUS  -->
 
 		<form action="/create-event/new" method="get" class="form">
