--- a/app/views/create-event/description.html
+++ b/app/views/create-event/description.html
@@ -283,7 +283,7 @@
 					  <summary role="button" aria-controls="details-content-0" aria-expanded="false"><span class="summary">Examples and guidance</span></summary>
 					  <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="true"  style="margin-top:0px; margin-bottom:30px; padding-bottom:10px;">
 						  <p>
-							  Listing your event's outcomes and benefits will help visitors to understand why they should register. Add your own unique benefits or alternatively, select any of the default options.
+							  Listing your event’s outcomes and benefits will help visitors to understand why they should register. Avoid generic statements. Be specific.
 						  </p>
 
 						  <p style="margin-bottom:5px;">Examples:</p>
