--- a/app/views/create-event/preview-static.html
+++ b/app/views/create-event/preview-static.html
@@ -16,46 +16,16 @@
     margin-right: 20px;
   }
   body {background-color: white}
-  .list-item {margin-bottom: 10px !important}
 </style>
   <div class="grid-row" style="margin: 0px 150px;padding-top:30px">
 
-{% if session.liveOrNot == "false" %}
-      <div style="background-color: #FFFFFF; border-bottom: 5px solid #000000; height:130px; padding-top:10px; padding-bottom:10px; display: flex;" >
-
-        <div style="margin-right:0px; margin-left:20px; margin-top:0px; float: left; width:200px;">
-          <p style="font-size:16px; margin-top:10px;" align="left"><a style="color:#000000; font-family: Arial,sans-serif;" href="/account#draft-events">Account home</a></p>
-
-          <p class="form-label-bold" style="font-size:18px; font-family: Arial,sans-serif; margin-top:56px;" align="left">
-            <span style="font-weight:700">Share draft</span><br>
-            www.great.gov.uk/event/mh43dz
-          </p>
-        </div>
-
-        <div style="float:left; width:100%; margin-top:30px;">
-          <p style="margin:5px; margin-top:10px;  margin-right:40px; font-size:36px; font-weight:700; font-family: Arial,sans-serif;">Draft event</p>
-        </div>
-
-
-        <form action="/create-event/go-live-now" method="get" class="form">
-
-          <div style="margin-left:20px; margin-right:30px; margin-top:10px; float: right;">
-            <input type="submit" class="button-grey" value="Make event live" style="margin-bottom:35px; width:170px;">
-
-            <input type="submit" class="button" value="Save draft" style="width:170px;"  formaction="/account#draft-events">
-          </div>
-
-        </form>
-
-      </div>
-    {% endif %}
 
     <div class="grid-row">
 
     <div class="column-one-half">
           <!-- EVENT title  -->
           <div class="grey" style="margin:10px 0;font-size:16px;color:#666666">{{ data['organiser-name'] }} London region events</div>
-          <h1 class="bold-large">{{ data['event-title'] }}</h1>
+          <h1 class="bold-large">Coal Mongolia 2017</h1>
           <h2 class="font-lead">{{ data['event-day'] }} {{ data['event-month-name'] }} {{ data['event-year'] }}</h2>
           <br />
           <h4 class="bold-xsmall">Sectors</h4>
@@ -72,14 +42,9 @@
           <h4 class="bold-small">Who should attend</h4> 
           <p>{{ data['summary-target-audience'] }}</p>
           <h4 class="bold-small">Why attend</h4> 
-          <ul class="list push--bottom">
-          <li class="list-item">{{ data['benefits0'] }}</li>
-          <li class="list-item">{{ data['benefits1'] }}</li>
-          <li class="list-item">{{ data['benefits2'] }}</li>
-          <li class="list-item">{{ data['benefits3'] }}</li>
-          </ul>
+          <p>{{ data['summary-target-audience'] }}</p>
           <h4 class="bold-small">Further details and background</h4> 
-          <p style="white-space: pre-wrap;">{{ data['event-description'] }}</p>
+          <p>{{ data['event-description'] }}</p>
 
           <a href="/register" class="button button-blue" style="margin:10px 0 0 0">Register</a>
 
