updates for external journey

--- a/app/views/create-event/preview.html
+++ b/app/views/create-event/preview.html
@@ -17,6 +17,7 @@
   }
   body {background-color: white}
   .list-item {margin-bottom: 10px !important}
+  a {text-decoration: underline};
 </style>
   <div class="grid-row" style="margin: 0px 150px;padding-top:30px">
 
@@ -54,7 +55,7 @@
 
     <div class="column-one-half">
           <!-- EVENT title  -->
-          <div class="grey" style="margin:10px 0;font-size:16px;color:#666666">{{ data['organiser-name'] }} London region events</div>
+          <div class="grey" style="margin:10px 0;font-size:16px;color:#666666">{{ data['organiser-name'] }}</div>
           <h1 class="bold-large">{{ data['event-title'] }}</h1>
           <h2 class="font-lead">{{ data['event-day'] }} {{ data['event-month-name'] }} {{ data['event-year'] }}</h2>
           <br />
@@ -79,7 +80,7 @@
           <li class="list-item">{{ data['benefits3'] }}</li>
           </ul>
           <h4 class="bold-small">Further details and background</h4> 
-          <p style="white-space: pre-wrap;">{{ data['event-description'] }}</p>
+          <p style="white-space: pre-wrap;" id="event-description">{{ data['event-description'] }}</p>
 
           <a href="/register" class="button button-blue" style="margin:10px 0 0 0">Register</a>
 
@@ -111,9 +112,13 @@
         <li>{{ data['event-start-time'] }} to {{ data['event-finish-time'] }}<br /></li>
         <p><a href="#">Add to calendar</a></p>
         <div class="bold-xsmall">Location</div>
-        <li style="white-space: pre-wrap;">{{ data['full-address-holder'] }}
+        <li style="white-space: pre-wrap;">{{ data['full-address-holder'] }}</li>
+        <p class="link-style"><a href="#">View on a map</a></p>
+        <div class="bold-xsmall">Organiser</div>
+        <li style="white-space: pre-wrap;">{{ data['organiser-name'] }}
+Phone: 01275 373 373
+Email: events@businesswest.co.uk
         </li>
-        <p class="link-style"><a href="#">View map</a></p>
         </ul>
       </div>
 
@@ -138,4 +143,10 @@
 
 {% include "includes/great-footer.html" %} 
 
+{% endblock %}
+{% block page_scripts %}
+<script>
+var htmlString = $('#event-description').text();
+$('#event-description').html(htmlString);
+</script>
 {% endblock %}
