update to link in the index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -26,8 +26,9 @@
 
       <ul>
         <li><a href="/scenario-1">Scenario one</a></li>
+<br />
+        <li><a href="/scenario-2">Event details page example</a></li>
       </ul>
-
 
       <br>
       <br>
