--- a/app/views/create-event/tickets.html
+++ b/app/views/create-event/tickets.html
@@ -108,7 +108,7 @@
 			  <div class="form-date" style="margin-top:5px">
 				  <div class="multiple-choice" style="margin-bottom:10px">
 					  <input id="radio-days-before-no" type="radio" name="radio-close-early-yes-no" value="no" checked="checked">
-					  <label for="radio-days-before-no">No, shut registrations at 12:00 on the day of the event</label>
+					  <label for="radio-days-before-no">No, shut registrations at midnight on the day of the event</label>
 				  </div>
 				  <div class="multiple-choice" style="margin-bottom:10px"  data-target="date-selection-area">
 					  <input id="radio-days-before-yes" type="radio" name="radio-close-early-yes-no" value="yes" >
