changes for details of event

--- a/app/views/create-event/organiser.html
+++ b/app/views/create-event/organiser.html
@@ -63,7 +63,7 @@
 			  <div id="event-owner-section" class="form-group {% if errorMissingOwner %} form-group-error {% endif %}" style="margin-top:10px;">
 
 				  <label class="form-label-bold" for="organiser-name">
-					  Event owner (internal use)<br>
+					  Point of contact (internal use)<br>
 					  {% if errorMissingName %}
 						  <span class="error-message">
 							  Please enter an organiser
