--- a/app/views/create-event/summary.html
+++ b/app/views/create-event/summary.html
@@ -41,7 +41,7 @@
 			  </div>
 
 			  <div>
-				  <dt class="cya-question" style="vertical-align:top">Event owner</dt>
+				  <dt class="cya-question" style="vertical-align:top">Point of contact</dt>
 				  <dd class="cya-answer">{{ data['owner-name'] }}
 				  </dd>
 				  <dd class="cya-change" style="vertical-align:top">
