--- a/app/views/index.html
+++ b/app/views/index.html
@@ -26,8 +26,10 @@
 
       <ul>
         <li><a href="/scenario-1">Scenario one</a></li>
-<br />
-        <li><a href="/scenario-2">Event details page example</a></li>
+        <br />
+        <li><a href="/scenario-2">Event details page example (generic)</a></li>
+        <br />
+        <li><a href="/scenario-3">Event details page example (food and drink)</a></li>
       </ul>
 
       <br>
